macOS: Focus first profile

In crrev.com/2638853003, the last profile in the menu is getting focused.
This should have been the first profile.

BUG=689889

Review-Url: https://codereview.chromium.org/2682153002
Cr-Commit-Position: refs/heads/master@{#449069}

Former-commit-id: 888b44e14b7afac674d55e305c8dd89a393cbdac